--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         <section>
             <h2>Our Team</h2>
             <div>
-                <img src="/../images/img-3.png" width="264" height="260" alt="Designer">
+                <img src="images/img-3.png" width="264" height="260" alt="Designer">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </div>
             <div>
-                <img src="/../images/img-2.png" width="264" height="260" alt="FrontDev">
+                <img src="images/img-2.png" width="264" height="260" alt="FrontDev">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </div>
             <div>
-                <img src="/../images/img-1.png" width="264" height="260" alt="Marketing">
+                <img src="images/img-1.png" width="264" height="260" alt="Marketing">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </div>
             <div>
-                <img src="/../images/img.png" width="264" height="260" alt="UI">
+                <img src="images/img.png" width="264" height="260" alt="UI">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </div>
