--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </ul>
             </address>
         <section>
-            <h1>Effective Solutions<br/>
+            <h1>Effective Solutions<br>
             for Your Business</h1>
             <button>Order Service</button>
         </section>
