--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section>
             <h1>Effective Solutions<br>
             for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
     </header>
     <main>
@@ -49,30 +49,30 @@
         <section>
             <h2>Our Team</h2>
             <div>
-                <img src="images/img-3.png" width="264" height="260" alt="Designer">
-                <h3>Mark Guerrero</h3>
+                <img src="images/img-3.jpg" width="264" height="260" alt="Designer">
+                <p><strong>Mark Guerrero</strong></p>
                 <p>Product Designer</p>
             </div>
             <div>
-                <img src="images/img-2.png" width="264" height="260" alt="FrontDev">
-                <h3>Tom Ford</h3>
+                <img src="images/img-2.jpg" width="264" height="260" alt="FrontDev">
+                <p><strong>Tom Ford</strong></p>
                 <p>Frontend Developer</p>
             </div>
             <div>
-                <img src="images/img-1.png" width="264" height="260" alt="Marketing">
-                <h3>Camila Garcia</h3>
+                <img src="images/img-1.jpg" width="264" height="260" alt="Marketing">
+                <p><strong>Camila Garcia</strong></p>
                 <p>Marketing</p>
             </div>
             <div>
-                <img src="images/img.png" width="264" height="260" alt="UI">
-                <h3>Daniel Wilson</h3>
+                <img src="images/img.jpg" width="264" height="260" alt="UI">
+                <p><strong>Daniel Wilson</strong></p>
                 <p>UI Designer</p>
             </div>
         </section>
     </main>
     <footer>
-            <p><span>Web</span>Studio</p>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="#"><span>Web</span>Studio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
