--- a/index.html
+++ b/index.html
@@ -73,6 +73,41 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/banking-app.jpg" width="360" height="300" alt="Banking">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/cashless-payment.jpg" width="360" height="300" alt="Payment">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/meditation-app.jpg" width="360" height="300" alt="Meditation">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/taxi-service.jpg" width="360" height="300" alt="Taxi">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/screen-illustration.jpg" width="360" height="300" alt="Screen Illustrations">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/online-courses.jpg" width="360" height="300" alt="Online Courses">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
