--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html"><span>Web</span>Studio</a>
                 <ul>
                     <li><a href="#">Studio</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -23,7 +29,7 @@
         </address>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
