--- a/index.html
+++ b/index.html
@@ -17,110 +17,110 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
+            <a href="./index.html" class="logo">Web<span class="header_logo">Studio</span></a>
                 <ul>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="./index.html" class="header_menu">Studio</a></li>
+                    <li><a href="" class="header_menu">Portfolio</a></li>
+                    <li><a href="" class="header_menu">Contacts</a></li>
                 </ul>
         </nav>
-        <address>
+        <address class="header_address">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="address_link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="address_link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section class="hero">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <h1 class="hero_title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero_button">Order Service</button>
         </section>
         <section>
             <h2>Some title h2</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <h3 class="section_title">Strategy</h3>
+                    <p class="section_text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h3 class="section_title">Punctuality</h3>
+                    <p class="section_text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                    <h3 class="section_title">Diligence</h3>
+                    <p class="section_text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <h3 class="section_title">Technologies</h3>
+                    <p class="section_text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="section_title_big">Our Team</h2>
             <ul>
-                <li>
+                <li class="team_li">
                     <img src="./images/img-3.jpg" width="264" height="260" alt="Designer">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="section_title">Mark Guerrero</h3>
+                    <p class="section_text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team_li">
                     <img src="./images/img-2.jpg" width="264" height="260" alt="FrontDev">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="section_title">Tom Ford</h3>
+                    <p class="section_text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team_li">
                     <img src="./images/img-1.jpg" width="264" height="260" alt="Marketing">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="section_title">Camila Garcia</h3>
+                    <p class="section_text">Marketing</p>
                 </li>
-                <li>
+                <li class="team_li">
                     <img src="./images/img.jpg" width="264" height="260" alt="UI">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="section_title">Daniel Wilson</h3>
+                    <p class="section_text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Portfolio</h2>
+            <h2 class="section_title_big">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/banking-app.jpg" width="360" height="300" alt="Banking">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="section_title">Banking App</h3>
+                    <p class="section_text">App</p>
                 </li>
                 <li>
                     <img src="./images/cashless-payment.jpg" width="360" height="300" alt="Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="section_title">Cashless Payment</h3>
+                    <p class="section_text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/meditation-app.jpg" width="360" height="300" alt="Meditation">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="section_title">Meditation App</h3>
+                    <p class="section_text">App</p>
                 </li>
                 <li>
                     <img src="./images/taxi-service.jpg" width="360" height="300" alt="Taxi">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="section_title">Taxi Service</h3>
+                    <p class="section_text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/screen-illustration.jpg" width="360" height="300" alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="section_title">Screen Illustrations</h3>
+                    <p class="section_text">Design</p>
                 </li>
                 <li>
                     <img src="./images/online-courses.jpg" width="360" height="300" alt="Online Courses">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="section_title">Online Courses</h3>
+                    <p class="section_text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a href="./index.html" class="logo">Web<span class="footer_logo">Studio</span></a>
+        <p class="footer_text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
